# TUIkles

./: Cargo.toml
src/: api.rs  main.rs  models.rs
src/ui/: dialog.rs  joke_panel.rs  mod.rs
