[package]
name = "TUIkles"
version = "0.1.0"
edition = "2021"

[dependencies]
cursive = "0.21.1"
reqwest = { version = "0.11", features = ["json"] } # For making HTTP requests
serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
serde_json = "1.0" # For working with JSON data
tokio = { version = "1", features = ["full"] }
colored = "2.1.0"
